@@ -51,8 +51,8 @@
 
 const char program[] = "fileto5c";
 const char author[]  = "Walter Brisken";
-const char version[] = "0.4";
-const char verdate[] = "20121113";
+const char version[] = "0.5";
+const char verdate[] = "20130826";
 
 const int defaultStatsRange[] = { 75000, 150000, 300000, 600000, 1200000, 2400000, 4800000, -1 };
 const unsigned int defaultChunkSizeMB = 20;
@@ -122,6 +122,26 @@ static void filename2label(char *label, const char *filename)
 	}
 
 	snprintf(label, MaxLabelLength, "%s", p);
+}
+
+// This replaces the TotalCapacityBytes field of S_BANKSTATUS which seems to be computed incorrectly for modules with drives > 2 TB
+static unsigned long long getTotalCapacity(SSHANDLE xlrDevice, int b)
+{
+	unsigned long long totalCapacity = 0;
+	
+	for(int d = 0; d < 8; ++d)
+	{
+		S_DRIVEINFO driveInfo;
+		XLR_RETURN_CODE xlrRC;
+
+		xlrRC = XLRGetDriveInfo(xlrDevice, d/2, d%2, &driveInfo);
+		if(xlrRC == XLR_SUCCESS)
+		{
+			totalCapacity += driveInfo.Capacity * 512LL;
+		}
+	}
+
+	return totalCapacity;
 }
 
 /* decode5B was taken straight from the DRS source code.  This code is originally (C) 2010 Walter Brisken */
@@ -303,7 +323,7 @@ static int decode5B(SSHANDLE xlrDevice, long long pointer, int framesToRead, uns
 	return returnValue;
 }
 
-static void printBankStat(int bank, const S_BANKSTATUS *bankStat, DifxMessageMk5Status *mk5status)
+static void printBankStat(int bank, const S_BANKSTATUS *bankStat, DifxMessageMk5Status *mk5status, unsigned long long totalCapacity)
 {
 	const char *vsn = bankStat->Label;
 	const char noVSN[] = "none";
@@ -351,6 +371,7 @@ static void printBankStat(int bank, const S_BANKSTATUS *bankStat, DifxMessageMk5
 		bankStat->ErrorData,
 		bankStat->Length,
 		bankStat->TotalCapacityBytes
+		// Use totalCapacity here instead if the firmware fix doesn't also fix the size calculation
 		);
 	fflush(stdout);
 }
@@ -510,8 +531,10 @@ static int filetoCore(const char *filename, int bank, const char *label, unsigne
 
 	for(int b = 0; b < N_BANK; ++b)
 	{
+		unsigned long long totalCapacity = getTotalCapacity(xlrDevice, b);
+
 		WATCHDOGTEST( XLRGetBankStatus(xlrDevice, b, stat+b) );
-		printBankStat(b, stat+b, mk5status);
+		printBankStat(b, stat+b, mk5status, totalCapacity);
 	}
 
 	mk5status->state = MARK5_STATE_OPEN;
@@ -709,11 +732,14 @@ static int filetoCore(const char *filename, int bank, const char *label, unsigne
 				{
 					continue;
 				}
+
+				unsigned long long totalCapacity = getTotalCapacity(xlrDevice, b);
+
 				WATCHDOGTEST( XLRGetBankStatus(xlrDevice, b, &bankStat) );
 				if(memcmp(stat+b, &bankStat, sizeof(S_BANKSTATUS)) != 0)
 				{
 					memcpy(stat+b, &bankStat, sizeof(S_BANKSTATUS));
-					printBankStat(b, &bankStat, mk5status);
+					printBankStat(b, &bankStat, mk5status, totalCapacity);
 				}
 			}
 			difxMessageSendMark5Status(mk5status);
